# DYNAMIC-HMIS-RUST-POWERED

./: README.md  database_starting_script.sql  drug_requisition  patient_dataflow_diagram.txt
apps/: package.json
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml  README.md  Untitled Diagram.drawio  index.html  main.rs  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/mobile/: pubspec.yaml
apps/mobile/lib/: main.dart
apps/src/: index.html
apps/src/css/: app.css  index.css
apps/src/js/: chat.js  login.js  theme.js
apps/src/pages/: dashboard.html  settings.html
apps/web/: README.md  index.js  package.json
apps/windows/: DOCUMENTATION.md  README.md  package-lock.json
apps/windows/src/: app.html  main.js
apps/windows/src-tauri/: Cargo.toml  tauri.conf.json
hmis_platform/: DYNAMIC-HMIS-RUST-POWERED-FILESYSTEM-DATAFLOW.drawio  DYNAMIC-HMIS-RUST-POWERED.drawio
infrastructure/docker/postgres/: docker-compose.yml
service/apis/: Cargo.toml
service/apis/src/: lib.rs  main.rs  route.rs
service/apis/src/administrator/staff/: add_staff.rs  dto.rs  load_staff.rs  mod.rs
service/apis/src/auth/: auth.md  auth.rs  dto.rs  mod.rs
service/apis/src/chats/: contacts.rs  load_chat.rs  mod.rs  model.rs  send_chat.rs
service/apis/src/config/: mod.rs
service/apis/src/database/: health.rs  mod.rs  mysql.rs
service/apis/src/receptionist/: mod.rs  patients_registration.rs
service/apis/src/receptionist/queue/: mod.rs  queue_registration.rs  queue_search.rs  queue_status.rs  queue_today.rs
service/apis/src/routes/: mod.rs
(+96 files in other folders)
